--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,10 +18,10 @@
           </a>
           <ul class="sidenav-second-level collapse" id="collapseComponents">
             <li> 
-              <a href="navbar.html"><i class="fa fa-fw fa-plus"></i> Add New</a>
+              <%=link_to "<i class='fa fa-fw fa-plus'></i> Add New".html_safe , new_customer_path %>
             </li>
             <li>
-              <a href="cards.html"><i class="fa fa-fw fa-search"></i> Search Customers </a>
+              <a href="cards.html"><i class="fa fa-fw fa-search"></i> Search </a>
             <li>
               <a href="navbar.html"><i class="fa fa-fw fa-globe"></i> All Customer</a>
             </li>
